--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -8,6 +8,7 @@ on:
       - "*"
 env:
   OPENSEARCH_DASHBOARDS_VERSION: '2.19'
+  OPENSEARCH_VERSION: '2.19.0'
   QUERY_INSIGHTS_BRANCH: '2.19'
   GRADLE_VERSION: '7.6.1'
   CYPRESS_VIDEO: true
@@ -32,13 +33,12 @@ jobs:
       TERM: xterm
     steps:
       - name: Set up JDK
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v1
         with:
           java-version: 21
-          distribution: temurin
 
       - name: Checkout Query Insights
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           path: query-insights
           repository: opensearch-project/query-insights
@@ -70,14 +70,14 @@ jobs:
         shell: bash
 
       - name: Checkout OpenSearch-Dashboards
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           repository: opensearch-project/OpenSearch-Dashboards
           path: OpenSearch-Dashboards
           ref: ${{ env.OPENSEARCH_DASHBOARDS_VERSION }}
 
       - name: Checkout Query Insights Dashboards plugin
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         with:
           path: OpenSearch-Dashboards/plugins/query-insights-dashboards
 
