--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "object-hash": "^3.0.0",
     "plotly.js-dist": "^2.34.0",
     "luxon": "^3.2.1",
-    "react-vis": "^1.11.7"
+    "react-vis": "^1.11.7",
+    "pbkdf2": "3.1.3",
+    "form-data": "4.0.4"
   },
   "resolutions": {
     "@types/react": "^16.9.8",
