--- a/.github/workflows/verify-binary-installation.yml
+++ b/.github/workflows/verify-binary-installation.yml
@@ -1,8 +1,8 @@
 name: 'Install Query Insights Dashboards with Plugin via Binary'
 
 on: [push, pull_request]
+
 env:
-  OPENSEARCH_VERSION: '3.1.0'
   CI: 1
   # avoid warnings like "tput: No value for $TERM and no -T specified"
   TERM: xterm
@@ -14,16 +14,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
         # TODO: add windows support when OSD core is stable on windows
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout Branch
         uses: actions/checkout@v3
 
-      - name: Set env
+      - name: Check working directory and list files
         run: |
+          echo "Current Directory: $(pwd)"
+          echo "Listing files:"
+          ls -la
+
+
+      - name: Set env from opensearch_dashboards.json
+        run: |
+          opensearch_version=$(node -p "require('./opensearch_dashboards.json').opensearchDashboardsVersion")
           plugin_version=$(node -p "require('./package.json').version")
+          echo "OPENSEARCH_VERSION=$opensearch_version" >> $GITHUB_ENV
           echo "PLUGIN_VERSION=$plugin_version" >> $GITHUB_ENV
         shell: bash
 
