--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -7,8 +7,8 @@ on:
     branches:
       - "*"
 env:
-  OPENSEARCH_DASHBOARDS_VERSION: '2.x'
-  QUERY_INSIGHTS_BRANCH: '2.x'
+  OPENSEARCH_DASHBOARDS_VERSION: '2.19'
+  QUERY_INSIGHTS_BRANCH: '2.19'
   GRADLE_VERSION: '7.6.1'
 jobs:
   tests:
