--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -33,7 +33,7 @@ jobs:
           REF="$EFFECTIVE_REF"
           echo "Current branch (effective): $REF"
           if [[ "$REF" == "main" ]]; then
-            echo "OPENSEARCH_BRANCH=main" >> "$GITHUB_ENV"
+
             echo "OPENSEARCH_DASHBOARDS_VERSION=main" >> "$GITHUB_ENV"
             echo "QUERY_INSIGHTS_BRANCH=main" >> "$GITHUB_ENV"
             echo "NEED_PARSE_VERSION=1" >> "$GITHUB_ENV"
@@ -62,50 +62,41 @@ jobs:
           repository: opensearch-project/query-insights
           ref: ${{ env.QUERY_INSIGHTS_BRANCH }}
 
-      - name: Checkout OpenSearch
-        uses: actions/checkout@v4
-        with:
-          path: OpenSearch
-          repository: opensearch-project/OpenSearch
-          ref: ${{ env.OPENSEARCH_BRANCH }}
-
-      - name: Check working directory and list files
-        run: |
-          echo "Current Directory: $(pwd)"
-          echo "Listing files:"
-          ls -la
-
       - name: Fetch OpenSearch version from build.gradle
+        shell: bash
         run: |
-          # Navigate to the query-insights directory
+          set -euo pipefail
           cd query-insights
 
-          # Check if build.gradle exists
-          if [ -f "build.gradle" ]; then
-            echo "build.gradle file exists!"
+          # Sanity check
+          test -f build.gradle || { echo "build.gradle not found in $(pwd)"; exit 1; }
+
+          echo "Printing build.gradle content:"
+          sed -n '1,200p' build.gradle
+
+          # Extract OPENSEARCH_VERSION via Node (same regex you had)
+          opensearch_version=$(node -e "
+            const fs = require('fs');
+            const s = fs.readFileSync('build.gradle', 'utf-8');
+            const m = s.match(/opensearch_version\\s*=\\s*System\\.getProperty\\(['\"][^'\"]+['\"],\\s*['\"]([^'\"]+)['\"]\\)/);
+            if (!m) { process.exit(2); }
+            console.log(m[1]);
+          ") || { echo 'Failed to parse opensearch_version from build.gradle'; exit 1; }
+
+          # Derive major.minor branch (e.g., 3.2.0[-SNAPSHOT] -> 3.2)
+          if [[ "$opensearch_version" =~ ^([0-9]+)\.([0-9]+)\.[0-9]+([.-].*)?$ ]]; then
+            opensearch_branch="${BASH_REMATCH[1]}.${BASH_REMATCH[2]}"
           else
-            echo "build.gradle file not found!"
+            echo "::error ::Parsed version '$opensearch_version' is not in X.Y.Z form"
             exit 1
           fi
 
-          # Print the content of build.gradle for debugging
-          echo "Printing build.gradle content:"
-          cat build.gradle
+          # Export to env for later steps
+          echo "OPENSEARCH_VERSION=$opensearch_version" >> "$GITHUB_ENV"
+          echo "OPENSEARCH_BRANCH=$opensearch_branch" >> "$GITHUB_ENV"
 
-          # Extract the version from build.gradle using Node.js with the updated regex
-          opensearch_version=$(node -e "
-            const fs = require('fs');
-            const gradleFile = fs.readFileSync('build.gradle', 'utf-8');
-            const match = gradleFile.match(/opensearch_version\\s*=\\s*System\\.getProperty\\(['\"][^'\"]+['\"],\\s*['\"]([^'\"]+)['\"]\\)/);
-            console.log(match ? match[1] : 'No version found');
-          ")
-
-          # Set the OpenSearch version as an environment variable
-          echo "OPENSEARCH_VERSION=$opensearch_version" >> $GITHUB_ENV
-
-          # Print the version for debugging
           echo "Using OpenSearch version: $opensearch_version"
-        shell: bash
+          echo "Derived OPENSEARCH_BRANCH: $opensearch_branch"
 
 
       - name: Verify OpenSearch version
