--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -8,6 +8,9 @@ on:
       - "*"
 env:
   EFFECTIVE_REF: ${{ github.event_name == 'pull_request' && github.base_ref || github.ref_name }}
+  GRADLE_VERSION: '7.6.1'
+  CYPRESS_VIDEO: true
+  CYPRESS_SCREENSHOT_ON_RUN_FAILURE: true
 
 jobs:
   tests:
@@ -33,19 +36,12 @@ jobs:
           REF="$EFFECTIVE_REF"
           echo "Current branch (effective): $REF"
           if [[ "$REF" == "main" ]]; then
-
             echo "OPENSEARCH_DASHBOARDS_VERSION=main" >> "$GITHUB_ENV"
             echo "QUERY_INSIGHTS_BRANCH=main" >> "$GITHUB_ENV"
-            echo "NEED_PARSE_VERSION=1" >> "$GITHUB_ENV"
           else
             echo "OPENSEARCH_BRANCH=$REF" >> "$GITHUB_ENV"
             echo "OPENSEARCH_DASHBOARDS_VERSION=$REF" >> "$GITHUB_ENV"
             echo "QUERY_INSIGHTS_BRANCH=$REF" >> "$GITHUB_ENV"
-            echo "NEED_PARSE_VERSION=0" >> "$GITHUB_ENV"
-            # Default OPENSEARCH_VERSION if not set and ref looks like X.Y
-            if [[ "$REF" =~ ^([0-9]+)\.([0-9]+)$ ]]; then
-              echo "OPENSEARCH_VERSION=${REF}.0-SNAPSHOT" >> "$GITHUB_ENV"
-            fi
           fi
 
 
@@ -167,6 +163,25 @@ jobs:
           echo -e "\nTesting WLM stats endpoint:"
           curl -s http://localhost:9200/_wlm/workload_group | jq '.'
         shell: bash
+
+      - name: Enable Workload Management
+        shell: bash
+        run: |
+          set -euo pipefail
+          echo "Enabling WLM create mode..."
+          # If your cluster requires auth, set OS_AUTH="admin:admin" at job env and we'll use it.
+          AUTH_FLAG=""
+          if [[ -n "${OS_AUTH:-}" ]]; then AUTH_FLAG=(-u "$OS_AUTH"); fi
+
+          # turn on create mode
+          curl -sS "${AUTH_FLAG[@]}" -X PUT "http://localhost:9200/_cluster/settings" \
+            -H 'Content-Type: application/json' \
+            -d '{"persistent":{"wlm.workload_group.mode":"enabled"}}' | jq '.'
+
+          # verify
+          echo "Verifying cluster setting:"
+          curl -sS "${AUTH_FLAG[@]}" "http://localhost:9200/_cluster/settings" | jq '.persistent."wlm.workload_group.mode"'
+
 
 
       - name: Checkout OpenSearch-Dashboards
