--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -7,7 +7,8 @@ on:
     branches:
       - "*"
 env:
-  EFFECTIVE_REF: ${{ github.event_name == 'pull_request' && github.base_ref || github.ref_name }}
+  OPENSEARCH_DASHBOARDS_VERSION: 'main'
+  QUERY_INSIGHTS_BRANCH: 'main'
   GRADLE_VERSION: '7.6.1'
   CYPRESS_VIDEO: true
   CYPRESS_SCREENSHOT_ON_RUN_FAILURE: true
@@ -30,20 +31,6 @@ jobs:
       # avoid warnings like "tput: No value for $TERM and no -T specified"
       TERM: xterm
     steps:
-      - name: Decide base refs (without version yet)
-        shell: bash
-        run: |
-          REF="$EFFECTIVE_REF"
-          echo "Current branch (effective): $REF"
-          if [[ "$REF" == "main" ]]; then
-            echo "OPENSEARCH_DASHBOARDS_VERSION=main" >> "$GITHUB_ENV"
-            echo "QUERY_INSIGHTS_BRANCH=main" >> "$GITHUB_ENV"
-          else
-            echo "OPENSEARCH_BRANCH=$REF" >> "$GITHUB_ENV"
-            echo "OPENSEARCH_DASHBOARDS_VERSION=$REF" >> "$GITHUB_ENV"
-            echo "QUERY_INSIGHTS_BRANCH=$REF" >> "$GITHUB_ENV"
-          fi
-
 
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -58,48 +45,6 @@ jobs:
           repository: opensearch-project/query-insights
           ref: ${{ env.QUERY_INSIGHTS_BRANCH }}
 
-      - name: Fetch OpenSearch version from build.gradle
-        shell: bash
-        run: |
-          set -euo pipefail
-          cd query-insights
-
-          # Sanity check
-          test -f build.gradle || { echo "build.gradle not found in $(pwd)"; exit 1; }
-
-          echo "Printing build.gradle content:"
-          sed -n '1,200p' build.gradle
-
-          # Extract OPENSEARCH_VERSION via Node (same regex you had)
-          opensearch_version=$(node -e "
-            const fs = require('fs');
-            const s = fs.readFileSync('build.gradle', 'utf-8');
-            const m = s.match(/opensearch_version\\s*=\\s*System\\.getProperty\\(['\"][^'\"]+['\"],\\s*['\"]([^'\"]+)['\"]\\)/);
-            if (!m) { process.exit(2); }
-            console.log(m[1]);
-          ") || { echo 'Failed to parse opensearch_version from build.gradle'; exit 1; }
-
-          # Derive major.minor branch (e.g., 3.2.0[-SNAPSHOT] -> 3.2)
-          if [[ "$opensearch_version" =~ ^([0-9]+)\.([0-9]+)\.[0-9]+([.-].*)?$ ]]; then
-            opensearch_branch="${BASH_REMATCH[1]}.${BASH_REMATCH[2]}"
-          else
-            echo "::error ::Parsed version '$opensearch_version' is not in X.Y.Z form"
-            exit 1
-          fi
-
-          # Export to env for later steps
-          echo "OPENSEARCH_VERSION=$opensearch_version" >> "$GITHUB_ENV"
-          echo "OPENSEARCH_BRANCH=$opensearch_branch" >> "$GITHUB_ENV"
-
-          echo "Using OpenSearch version: $opensearch_version"
-          echo "Derived OPENSEARCH_BRANCH: $opensearch_branch"
-
-
-      - name: Verify OpenSearch version
-        run: |
-          echo "Using OpenSearch version: ${{ env.OPENSEARCH_VERSION }}"
-          echo "Using Plugin version: ${{ env.OPENSEARCH_VERSION }}"
-
       - name: Checkout OpenSearch
         uses: actions/checkout@v4
         with:
@@ -107,7 +52,52 @@ jobs:
           repository: opensearch-project/OpenSearch
           ref: ${{ env.OPENSEARCH_BRANCH }}
 
-      - name: Build WLM Related Plugins
+      - name: Check working directory and list files
+        run: |
+          echo "Current Directory: $(pwd)"
+          echo "Listing files:"
+          ls -la
+
+      - name: Fetch OpenSearch version from build.gradle
+        run: |
+          # Navigate to the query-insights directory
+          cd query-insights
+
+          # Check if build.gradle exists
+          if [ -f "build.gradle" ]; then
+            echo "build.gradle file exists!"
+          else
+            echo "build.gradle file not found!"
+            exit 1
+          fi
+
+          # Print the content of build.gradle for debugging
+          echo "Printing build.gradle content:"
+          cat build.gradle
+
+          # Extract the version from build.gradle using Node.js with the updated regex
+          opensearch_version=$(node -e "
+            const fs = require('fs');
+            const gradleFile = fs.readFileSync('build.gradle', 'utf-8');
+            const match = gradleFile.match(/opensearch_version\\s*=\\s*System\\.getProperty\\(['\"][^'\"]+['\"],\\s*['\"]([^'\"]+)['\"]\\)/);
+            console.log(match ? match[1] : 'No version found');
+          ")
+
+          # Set the OpenSearch version as an environment variable
+          echo "OPENSEARCH_VERSION=$opensearch_version" >> $GITHUB_ENV
+          echo "PLUGIN_VERSION=$opensearch_version" >> $GITHUB_ENV
+
+          # Print the version for debugging
+          echo "Using OpenSearch version: $opensearch_version"
+        shell: bash
+
+
+      - name: Verify OpenSearch version
+        run: |
+          echo "Using OpenSearch version: ${{ env.OPENSEARCH_VERSION }}"
+          echo "Using Plugin version: ${{ env.PLUGIN_VERSION }}"
+
+      - name: Build Required Plugins
         run: |
           cd OpenSearch
           # Build rule-framework (autotagging-commons)
@@ -163,25 +153,6 @@ jobs:
           echo -e "\nTesting WLM stats endpoint:"
           curl -s http://localhost:9200/_wlm/workload_group | jq '.'
         shell: bash
-
-      - name: Enable Workload Management
-        shell: bash
-        run: |
-          set -euo pipefail
-          echo "Enabling WLM create mode..."
-          # If your cluster requires auth, set OS_AUTH="admin:admin" at job env and we'll use it.
-          AUTH_FLAG=""
-          if [[ -n "${OS_AUTH:-}" ]]; then AUTH_FLAG=(-u "$OS_AUTH"); fi
-
-          # turn on create mode
-          curl -sS "${AUTH_FLAG[@]}" -X PUT "http://localhost:9200/_cluster/settings" \
-            -H 'Content-Type: application/json' \
-            -d '{"persistent":{"wlm.workload_group.mode":"enabled"}}' | jq '.'
-
-          # verify
-          echo "Verifying cluster setting:"
-          curl -sS "${AUTH_FLAG[@]}" "http://localhost:9200/_cluster/settings" | jq '.persistent."wlm.workload_group.mode"'
-
 
 
       - name: Checkout OpenSearch-Dashboards
